# life-dashboard

./: .env  .gitignore  .gitpod.yml  Cargo.toml  rust-toolchain.toml
migration/: 20240304_create_vacation_requests.sql
migrations/: 20250315094452_create_vacation_requests.down.sql  20250315094452_create_vacation_requests.up.sql
src/: email.rs  main.rs  routes.rs
src/components/: mod.rs  vacation_request.rs
src/models/: mod.rs  vacation.rs
src/services/: database.rs  email.rs
src/utils/: config.rs
