[package]
name = "life-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", optional = true }
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = "0.6"
lettre = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
shuttle-runtime = "0.41"
shuttle-axum = "0.41"
shuttle-shared-db = "0.41"