[workspace]

[package]
name = "life-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos Core
leptos = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6" }
leptos_meta = { version = "0.6" }
cfg-if = "1.0.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }

# Email
lettre = { version = "0.11" }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
secrecy = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.40", features = ["serde"] }

# Security & Validation
validator = "0.16"
serde = "1.0.218"

[features]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.leptos]
output-name = "life-dashboard"